2014-03-01  Michael Schwendt  <mschwendt@users.sf.net>

	* src/main.c: update for changed tuple_set_*() number of arguments

2013-09-24  Michael Schwendt  <mschwendt@users.sf.net>

	* configure.ac, src/main.c, src/plugin.c: port to
	  Audacious 3.5-devel plugin API (45)

2013-02-16  Michael Schwendt  <mschwendt@users.sf.net>

	* src/plugin.c: use .about_text instead of GTK+
	* src/about.*: delete, obsolete
	* src/Makefile.am: updates for dropping GTK+ usage
	  and Audacious input plugin dir
	* configure.ac: rename from configure.in and update

2012-06-18    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c, src/main.c, src/plugin.c: port to
	  Audacious 3.3-alpha1 plugin API (40)

2012-01-02    Michael Schwendt <mschwendt@users.sf.net>

	* configure.in: add pkg-config checks
	* src/main.c, src/plugin.c: requires glib-2.0.pc gtk+-3.0.pc CFLAGS
	* src/configure.c: require Audacious 3.2 beta1 API

2011-10-14    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: port to Audacious 3.1 beta1 API
	* require at least Audacious 3.1

2011-07-06    Michael Schwendt <mschwendt@users.sf.net>

	* src/configure.c: add widget config types

2011-06-15    Michael Schwendt <mschwendt@users.sf.net>

	* use Audacious GUI API instead of native GTK+
	* require at least Audacious 3.0-alpha1

2011-04-07    Michael Schwendt <mschwendt@users.sf.net>

	* src/about.c, src/configure.c: replace deprecated GTK+ stuff
	* src/main.c: successful end of play() should return TRUE

2011-02-02    Michael Schwendt <mschwendt@users.sf.net>

	* src/main.c, src/plugin.c: port to Audacious 2.5 alpha1 API

2010-07-23    Michael Schwendt <mschwendt@users.sf.net>

	* src/plugin.c: use probe_for_tuple instead of get_song_tuple,
	  replace deprecated play_file, drop deprecated seek
	* src/main.c: replace deprecated play_file with play,
	  improve stop/pause/mseek, add probe_for_tuple

2010-07-21    Michael Schwendt <mschwendt@users.sf.net>
