@@ -1,3 +1,7 @@
+2014-06-12  Michael Schwendt  <mschwendt@users.sf.net>
+
+	* Makefile.am: install appdata metainfo file
+
 2014-03-01  Michael Schwendt  <mschwendt@users.sf.net>
 
 	* src/main.c: update for changed tuple_set_*() number of arguments
